<resources>
    <string name="app_name">TextEditor</string>

    <bool name="TESTING">true</bool>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_clean">Clean favorites</string>
    <string name="action_newDir">New Directory</string>
    <string name="action_charset">Choose Charsets</string>
    <string name="action_largerText">Increase Text Size</string>
    <string name="action_smallerText">Decrease Text Size</string>
    <string name="action_binary">Hex Mode</string>
    <string name="action_viewEdit">Edit</string>
    <string name="action_saveAs">Save As</string>
    <string name="action_favorites">Favorite</string>
    <string name="action_share">Share</string>
    <string name="action_random">Random</string>


    <string name="title_activity_editor">Editor</string>
    <string name="title_activity_list">List</string>

    <string name="search_icon">U+1F50D</string>


    <string name="favorites_file">com.ravenlamb.android.texteditor.FAVORITES_FILE</string>
    <!--<string name="num_favorites_key">com.ravenlamb.android.texteditor.NUM_FAVORITE_KEY</string>-->
    <string name="favorites">com.ravenlamb.android.texteditor.FAVORITES</string>
    <string name="recent_directories_file">com.ravenlamb.android.texteditor.RECENT_DIRECTORY_FILE</string>
    <string name="recent_directories_key">com.ravenlamb.android.texteditor.RECENT_DIRECTORIES_KEY</string>
    <string name="recent_files_file">com.ravenlamb.android.texteditor.RECENT_FILES_FILE</string>
    <string name="recent_files_key">com.ravenlamb.android.texteditor.RECENT_FILES_KEY</string>
    <string name="charcode_key">com.ravenlamb.android.texteditor.CHARCODE_KEY</string>


    <string name="favorites_text">favorites</string>
    <string name="recent_directories_text">directories</string>
    <string name="recent_files_text">files</string>
    <integer name="num_recent">15</integer>
    <integer name="max_favorites">1000</integer>


    <string name="settings_file">com.ravenlamb.android.texteditor.SETTINGS_FILE</string>
    <string name="background_color_key">com.ravenlamb.android.texteditor.BACKGROUND_KEY</string>
    <string name="text_color_key">com.ravenlamb.android.texteditor.TEXTCOLOR_KEY</string>
    <string name="text_size_key">com.ravenlamb.android.texteditor.TEXTSIZE_KEY</string>
    <string name="text_binary_key">com.ravenlamb.android.texteditor.TEXT_BINARY_KEY</string>
</resources>
